--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         <li>Invierno - 21 diciembre</li>
     </ol>
 
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quis hic,
+        ab beatae dolore nobis delectus quisquam similique modi recusandae quod
+        quasi expedita aut sequi aliquam corrupti aperiam quibusdam qui!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quis hic,
+        ab beatae dolore nobis delectus quisquam similique modi recusandae quod
+        quasi expedita aut sequi aliquam corrupti aperiam quibusdam qui!
+    </p>
+
     <script src="index.js"></script>
 </body>
 
