--- a/index.html
+++ b/index.html
@@ -11,32 +11,14 @@
 
 <body>
     <h1>Aprendiendo Git</h1>
-    <p>Mis primeros pasos en el versionado de código y aprendiendo a resolver conflictos.</p>
-    <ul>
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento 3</li>
-        <li>Elemento 4</li>
-        <li>Elemento 5</li>
-    </ul>
-
-    <ol>
-        <li>Primavera - 21 marzo</li>
-        <li>Verano - 21 junio</li>
-        <li>Otoño - 21 septiembre</li>
-        <li>Invierno - 21 diciembre</li>
-    </ol>
-
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quis hic,
-        ab beatae dolore nobis delectus quisquam similique modi recusandae quod
-        quasi expedita aut sequi aliquam corrupti aperiam quibusdam qui!
+        Mis primeros pasos en el versionado de código con Git y GitHub.
     </p>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quis hic,
-        ab beatae dolore nobis delectus quisquam similique modi recusandae quod
-        quasi expedita aut sequi aliquam corrupti aperiam quibusdam qui!
+        Quieres dominar el uso de git mira este
+        <a href="https://jonmircha.com/git" target="_blank">enlace</a>
     </p>
+    <img src="git-flow.png" alt="Flujo básico de Git">
 
     <script src="index.js"></script>
 </body>
